2004-06-12  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/msvc71.sln:
	* win32/testsuite/:
          prepare to compile the testsuite with MSVC

2004-06-12  Steve Lhomme  <steve.lhomme@free.fr>

	* docs/manual/win32.xml:
          attempt to transform the Win32 README into an XML doc

2004-06-12  Steve Lhomme  <steve.lhomme@free.fr>

	* gst/gst.c:
	* gst/gstbin.*:
	* gst/config.h.in:
	* gst/gstelement.*:
	* gst/gstevent.h:
	* gst/gstobject.*:
	* gst/gstpad.h:
	* tools/gst-register.c:
	* win32/gstreamer.def:
          extern symbols are now exported for the Windows DLL

2004-06-12  Steve Lhomme  <steve.lhomme@free.fr>

	* gst/gstinfo.h:
          fix a problem to enable/disable DEBUG under MSVC

2004-06-12  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/:
          enable more debug code in DEBUG build

2004-06-12  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/config.h:
    * gst/gst-i18n-app.h:
          enable NLS under Windows

2004-06-12  Jan Schmidt  <thaytan@mad.scientist.com>
	* tools/gst-compprep.c: (handle_xmlerror), (main):
	  Make an error that baffled me a bit clearer

2004-06-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstqueue.c:
          don't use g_queue_get_length () because it's 2.4, use ->length

2004-06-11  Steve Lhomme  <steve.lhomme@free.fr>

	reviewed by Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* tools/gst-inspect.c: (print_signal_info):
	  don't free random data twice. (fixes #144185)

2004-06-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstqueue.c:
	* gst/gstqueue.h:
	  fix removing from the wrong queue on event timeout
	  fix disposing of the event queue by casting correctly
	  add mutexes for handling the event queue
	  someone was sleeping when fixing queue last time around :)

2004-06-10  Johan Dahlin  <johan@gnome.org>

	* gst/gst.c (gst_init_check_with_popt_table): Do not fail on
	errors, like gtk. It makes it more useful in bindings.
